added delete user feature
