# src/main/resources/static/api-docs.yml
@@ -506,6 +506,30 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorV1'
   /user/{user_id}:
+    delete:
+      tags:
+        - user
+      description: Delete a user by his id
+      operationId: delete
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: User id
+          schema:
+            type: string
+      security:
+        - JwtToken: [ ]
+        - AccessToken: [ ]
+      responses:
+        204:
+          description: User delete
+        404:
+          description: User not found
+          content:
+            application/vnd.kaiqkt_auth_api_error_v1+json:
+              schema:
+                $ref: '#/components/schemas/ErrorV1'
     get:
       tags:
         - user
